add batchWaitStrategy consumer config option