@@ -1,11 +1,15 @@
 package com.solace.spring.cloud.stream.binder.inbound;
 
 import com.solace.spring.cloud.stream.binder.properties.SolaceConsumerProperties;
+import com.solace.spring.cloud.stream.binder.util.BatchWaitStrategy;
 import com.solace.spring.cloud.stream.binder.util.MessageContainer;
+import org.assertj.core.api.InstanceOfAssertFactories;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
+import org.junitpioneer.jupiter.cartesian.CartesianTest;
+import org.junitpioneer.jupiter.cartesian.CartesianTest.Values;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -15,12 +19,12 @@ import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static com.solace.spring.cloud.stream.binder.test.util.RetryableAssertions.RETRY_INTERVAL;
 import static com.solace.spring.cloud.stream.binder.test.util.RetryableAssertions.retryAssert;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatNoException;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
@@ -32,7 +36,7 @@ public class BatchCollectorTest {
 		SolaceConsumerProperties consumerProperties = new SolaceConsumerProperties();
 		List<MessageContainer> messageContainers = IntStream.range(0, consumerProperties.getBatchMaxSize())
 				.mapToObj(i -> Mockito.mock(MessageContainer.class))
-				.collect(Collectors.toList());
+				.toList();
 
 		BatchCollector batchCollector = new BatchCollector(consumerProperties);
 
@@ -43,14 +47,14 @@ public class BatchCollectorTest {
 			batchCollector.addToBatch(messageContainer);
 		});
 
-		assertTrue(batchCollector.isBatchAvailable(), "batch is not available");
-		assertThat(batchCollector.collectBatchIfAvailable()).get().asList()
-				.containsExactlyElementsOf(messageContainers);
-
-		// Do it again since we haven't confirmed delivery
-		assertTrue(batchCollector.isBatchAvailable(), "batch is not available");
-		assertThat(batchCollector.collectBatchIfAvailable()).get().asList()
-				.containsExactlyElementsOf(messageContainers);
+		for (int i = 0; i < 3; i++) {
+			// Do it a few times since we haven't confirmed delivery
+			assertTrue(batchCollector.isBatchAvailable(), "batch is not available");
+			assertThat(batchCollector.collectBatchIfAvailable())
+					.get()
+					.asInstanceOf(InstanceOfAssertFactories.list(MessageContainer.class))
+					.containsExactlyElementsOf(messageContainers);
+		}
 
 		batchCollector.confirmDelivery();
 		assertFalse(batchCollector.isBatchAvailable(), "batch is unexpectedly available");
@@ -58,16 +62,65 @@ public class BatchCollectorTest {
 	}
 
 	@Test
-	public void testReachedBatchTimeout(@Mock MessageContainer messageContainer) throws InterruptedException {
+	public void testAddNull() {
+		SolaceConsumerProperties consumerProperties = new SolaceConsumerProperties();
+		BatchCollector batchCollector = new BatchCollector(consumerProperties);
+		assertThatNoException().isThrownBy(() -> batchCollector.addToBatch(null));
+		assertThat(batchCollector.isBatchAvailable()).isFalse();
+		assertThat(batchCollector.collectBatchIfAvailable()).isEmpty();
+	}
+
+	@CartesianTest(name = "[{index}] batchIsEmpty={0}")
+	public void testReachedBatchTimeout(@Values(booleans = {false, true}) boolean batchIsEmpty,
+										@Mock MessageContainer messageContainer) throws InterruptedException {
 		SolaceConsumerProperties consumerProperties = new SolaceConsumerProperties();
 		consumerProperties.setBatchTimeout((int) TimeUnit.SECONDS.toMillis(5));
 		BatchCollector batchCollector = new BatchCollector(consumerProperties);
-		batchCollector.addToBatch(messageContainer);
+		batchCollector.addToBatch(batchIsEmpty ? null : messageContainer);
 		retryAssert(() -> {
 			assertTrue(batchCollector.isBatchAvailable(), "batch is not available");
-			assertThat(batchCollector.collectBatchIfAvailable()).get().asList().containsExactly(messageContainer);
+			if (batchIsEmpty) {
+				assertThat(batchCollector.collectBatchIfAvailable()).isEmpty();
+			} else {
+				assertThat(batchCollector.collectBatchIfAvailable())
+						.get()
+						.asInstanceOf(InstanceOfAssertFactories.list(MessageContainer.class))
+						.containsExactly(messageContainer);
+			}
 		}, consumerProperties.getBatchTimeout() + RETRY_INTERVAL.multipliedBy(2).toMillis(),
 				TimeUnit.MILLISECONDS);
+	}
+
+	@Test
+	public void testImmediatelyReturnWhenNull(@Mock MessageContainer messageContainer) {
+		SolaceConsumerProperties consumerProperties = new SolaceConsumerProperties();
+		consumerProperties.setBatchWaitStrategy(BatchWaitStrategy.IMMEDIATE);
+
+		BatchCollector batchCollector = new BatchCollector(consumerProperties);
+		assertThat(batchCollector.isBatchAvailable()).isFalse();
+		assertThat(batchCollector.collectBatchIfAvailable()).isEmpty();
+
+		batchCollector.addToBatch(null);
+		assertThat(batchCollector.isBatchAvailable()).isTrue();
+		assertThat(batchCollector.collectBatchIfAvailable()).isEmpty();
+
+		batchCollector.addToBatch(messageContainer);
+		assertThat(batchCollector.isBatchAvailable()).isFalse();
+		assertThat(batchCollector.collectBatchIfAvailable()).isEmpty();
+
+		batchCollector.addToBatch(null);
+		for (int i = 0; i < 3; i++) {
+			// Do it a few times since we haven't confirmed delivery
+			assertTrue(batchCollector.isBatchAvailable(), "batch is not available");
+			assertThat(batchCollector.collectBatchIfAvailable())
+					.get()
+					.asInstanceOf(InstanceOfAssertFactories.list(MessageContainer.class))
+					.containsExactly(messageContainer);
+		}
+
+		batchCollector.confirmDelivery();
+		assertFalse(batchCollector.isBatchAvailable(), "batch is unexpectedly available");
+		assertThat(batchCollector.collectBatchIfAvailable()).isEmpty();
 	}
 
 	@Test
@@ -94,7 +147,9 @@ public class BatchCollectorTest {
 		batchCollector.addToBatch(messageContainer1);
 		batchCollector.addToBatch(messageContainer2);
 		assertTrue(batchCollector.isBatchAvailable(), "batch is not available");
-		assertThat(batchCollector.collectBatchIfAvailable()).get().asList()
+		assertThat(batchCollector.collectBatchIfAvailable())
+				.get()
+				.asInstanceOf(InstanceOfAssertFactories.list(MessageContainer.class))
 				.containsExactly(messageContainer1, messageContainer2);
 
 		staleFlag.set(true);
@@ -104,7 +159,9 @@ public class BatchCollectorTest {
 
 		batchCollector.addToBatch(messageContainer4);
 		assertTrue(batchCollector.isBatchAvailable(), "batch is not available");
-		assertThat(batchCollector.collectBatchIfAvailable()).get().asList()
+		assertThat(batchCollector.collectBatchIfAvailable())
+				.get()
+				.asInstanceOf(InstanceOfAssertFactories.list(MessageContainer.class))
 				.containsExactly(messageContainer3, messageContainer4);
 	}
 
@@ -137,6 +194,9 @@ public class BatchCollectorTest {
 
 		batchCollector.addToBatch(messageContainer2);
 		assertTrue(batchCollector.isBatchAvailable(), "batch is not available");
-		assertThat(batchCollector.collectBatchIfAvailable()).get().asList().containsExactly(messageContainer2);
+		assertThat(batchCollector.collectBatchIfAvailable())
+				.get()
+				.asInstanceOf(InstanceOfAssertFactories.list(MessageContainer.class))
+				.containsExactly(messageContainer2);
 	}
 }
